Sources/NeonFieldOps/include/NeonFieldOps.h


void babybear_ntt_neon(uint32_t *data, int logN);
void babybear_intt_neon(uint32_t *data, int logN);
void goldilocks_ntt(uint64_t *data, int logN);
void goldilocks_intt(uint64_t *data, int logN);
void bn254_fr_ntt(uint64_t *data, int logN);
void bn254_fr_intt(uint64_t *data, int logN);
void bn254_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                          int n, uint64_t *result);
void bn254_fold_generators(const uint64_t *GL, const uint64_t *GR,
                            const uint32_t *x, const uint32_t *xInv,
                            int halfLen, uint64_t *result);
void bn254_point_scalar_mul(const uint64_t *p, const uint32_t *scalar, uint64_t *r);
void bn254_point_add_mixed(const uint64_t *p, const uint64_t *q_aff, uint64_t *r);
void bn254_point_add(const uint64_t *p, const uint64_t *q, uint64_t *r);
void bn254_batch_to_affine(const uint64_t *proj, uint64_t *aff, int n);
void bn254_projective_to_affine(const uint64_t *p, uint64_t *affine);
void bn254_msm_projective(const uint64_t *points, const uint32_t *scalars,
                           int n, uint64_t *result);
void bn254_fr_inner_product(const uint64_t *a, const uint64_t *b, int n, uint64_t *result);
void bn254_fr_vector_fold(const uint64_t *a, const uint64_t *b,
                           const uint64_t *x, const uint64_t *xInv,
                           int n, uint64_t *out);
void bn254_fr_batch_to_limbs(const uint64_t *mont, uint32_t *limbs, int n);
void bn254_fr_synthetic_div(const uint64_t *coeffs, const uint64_t *z,
                             int n, uint64_t *quotient);
void bn254_fr_horner_eval(const uint64_t *coeffs, int n, const uint64_t z[4],
                           uint64_t result[4]);
void bn254_fr_eval_and_div(const uint64_t *coeffs, int n, const uint64_t z[4],
                            uint64_t eval_out[4], uint64_t *quotient);
void goldilocks_ntt_neon(uint64_t *data, int logN);
void goldilocks_intt_neon(uint64_t *data, int logN);
void gl_batch_add_neon(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
void gl_batch_sub_neon(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
void gl_batch_mul_neon(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
void gl_batch_butterfly_neon(uint64_t *data, const uint64_t *twiddles, int halfBlock, int nBlocks);
void gl_batch_butterfly_dif_neon(uint64_t *data, const uint64_t *twiddles, int halfBlock, int nBlocks);
void mont_mul_asm(uint64_t *result, const uint64_t *a, const uint64_t *b);
void mont_mul_c(uint64_t *result, const uint64_t *a, const uint64_t *b);
void mont_mul_batch_asm(uint64_t *data, const uint64_t *multiplier, int n);
void mont_mul_pair_batch_asm(uint64_t *result, const uint64_t *a, const uint64_t *b, int n);
void mont_mul_batch_c(uint64_t *data, const uint64_t *multiplier, int n);
void mont_mul_pair_batch_c(uint64_t *result, const uint64_t *a, const uint64_t *b, int n);
int mont_mul_asm_test(void);
void bn254_fr_batch_add_neon(uint64_t *result, const uint64_t *a,
                              const uint64_t *b, int n);
void bn254_fr_batch_sub_neon(uint64_t *result, const uint64_t *a,
                              const uint64_t *b, int n);
void bn254_fr_batch_neg_neon(uint64_t *result, const uint64_t *a, int n);
void bn254_fr_batch_mul_scalar_neon(uint64_t *result, const uint64_t *a,
                                     const uint64_t *scalar, int n);
void bn254_fr_batch_add_parallel(uint64_t *result, const uint64_t *a,
                                  const uint64_t *b, int n);
void bn254_fr_batch_sub_parallel(uint64_t *result, const uint64_t *a,
                                  const uint64_t *b, int n);
void bn254_fr_batch_neg_parallel(uint64_t *result, const uint64_t *a, int n);
void bn254_fr_batch_mul_scalar_parallel(uint64_t *result, const uint64_t *a,
                                         const uint64_t *scalar, int n);
void bn254_fr_vector_sum(const uint64_t *a, int n, uint64_t result[4]);
void bn254_fr_batch_beta_add(const uint64_t *beta, const uint64_t *values,
                              const int *indices, int m, uint64_t *result);
void bn254_fr_batch_decompose(const uint64_t *lookups, int m,
                               int numChunks, int bitsPerChunk,
                               int *indices);
void bn254_fr_batch_inverse(const uint64_t *a, int n, uint64_t *out);
void bn254_fr_full_sumcheck(const uint64_t *evals, int numVars,
                             const uint64_t *challenges,
                             uint64_t *rounds, uint64_t *finalEval);
void bn254_fr_mle_eval(const uint64_t *evals, int numVars,
                        const uint64_t *point, uint64_t result[4]);
void bn254_fr_inverse_evals(const uint64_t beta[4], const uint64_t *values,
                             int n, uint64_t *out);
void bn254_fr_inverse_evals_indexed(const uint64_t beta[4], const uint64_t *subtable,
                                     const int *indices, int n, uint64_t *out);
void bn254_fr_weighted_inverse_evals(const uint64_t beta[4], const uint64_t *values,
                                      const uint64_t *weights, int n, uint64_t *out);
void bn254_fr_inverse_mle_eval(const uint64_t beta[4], const uint64_t *subtable,
                                const int *indices, int n, int numVars,
                                const uint64_t *point, uint64_t result[4]);
void bn254_dual_msm_projective(
    const uint64_t *points1, const uint32_t *scalars1, int n1,
    const uint64_t *points2, const uint32_t *scalars2, int n2,
    uint64_t result1[12], uint64_t result2[12]);
void bn254_fr_inverse(const uint64_t a[4], uint64_t r[4]);
void bn254_fr_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bn254_fr_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bn254_fr_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bn254_fr_neg(const uint64_t a[4], uint64_t r[4]);
void bn254_fr_pow(const uint64_t a[4], uint64_t exp, uint64_t r[4]);
int bn254_fr_eq(const uint64_t a[4], const uint64_t b[4]);
int bn254_batch_kzg_verify(const uint64_t *srsG1, const uint64_t *srsSecret,
                           const uint64_t *commitments, const uint64_t *points,
                           const uint64_t *evaluations, const uint64_t *witnesses,
                           const uint64_t *batchChallenge, int n);
void bn254_fr_basefold_fold(const uint64_t *evals, uint64_t *result,
                             const uint64_t *alpha, uint32_t halfN);
void bn254_fr_basefold_fold_all(const uint64_t *evals, int numVars,
                                 const uint64_t *point, uint64_t *out_layers);
void bn254_fr_whir_fold(const uint64_t *evals, int n,
                         const uint64_t beta[4],
                         int reductionFactor,
                         uint64_t *result);
void bn254_fr_sqr(const uint64_t a[4], uint64_t r[4]);
void bn254_fp_sqr(const uint64_t a[4], uint64_t r[4]);
void bn254_fp_inv(const uint64_t a[4], uint64_t r[4]);
int  bn254_fp_sqrt(const uint64_t a[4], uint64_t r[4]);
void bn254_fr_pointwise_mul_sub(const uint64_t *a, const uint64_t *b,
                                 const uint64_t *c, uint64_t *result, int n);
void bn254_fr_coeff_div_vanishing(const uint64_t *pCoeffs, int domainN,
                                   uint64_t *hCoeffs);
void bn254_fr_linear_combine(const uint64_t *running, const uint64_t *new_vals,
                              const uint64_t rho[4], uint64_t *result, int count);
void bn254_miller_loop(const uint64_t p_aff[8], const uint64_t q_aff[16], uint64_t result[48]);
void bn254_final_exp(const uint64_t f[48], uint64_t result[48]);
void bn254_pairing(const uint64_t p_aff[8], const uint64_t q_aff[16], uint64_t result[48]);
int bn254_pairing_check(const uint64_t *pairs, int n);
void bgmw_precompute(const uint64_t *generators_affine, int n,
                     int window_bits, uint64_t *table_out);
void bgmw_msm(const uint64_t *table, int n, int window_bits,
              const uint32_t *scalars, uint64_t *result);