bindings/rust/zkmetal-sys/src/lib.rs

//! Raw FFI bindings to the NeonFieldOps C library.
//!
//! This crate provides unsafe `extern "C"` function declarations matching
//! `Sources/NeonFieldOps/include/NeonFieldOps.h`. All functions require
//! `target_arch = "aarch64"` (Apple Silicon / ARM64).
//!
//! Field elements are represented as arrays of `u64` limbs in little-endian
//! Montgomery form unless otherwise noted. Scalars for curve operations
//! use `u32` limbs in non-Montgomery integer form.

#![no_std]
#![allow(non_camel_case_types)]

use core::ffi::c_int;

// =============================================================================
// BabyBear NTT (p = 0x78000001, 32-bit field)
// =============================================================================

extern "C" {
    pub fn babybear_ntt_neon(data: *mut u32, logN: c_int);
    pub fn babybear_intt_neon(data: *mut u32, logN: c_int);
}

// =============================================================================
// Goldilocks NTT (p = 2^64 - 2^32 + 1)
// =============================================================================

extern "C" {
    pub fn goldilocks_ntt(data: *mut u64, logN: c_int);
    pub fn goldilocks_intt(data: *mut u64, logN: c_int);
    pub fn goldilocks_ntt_neon(data: *mut u64, logN: c_int);
    pub fn goldilocks_intt_neon(data: *mut u64, logN: c_int);

    pub fn gl_batch_add_neon(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
    pub fn gl_batch_sub_neon(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
    pub fn gl_batch_mul_neon(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
    pub fn gl_batch_butterfly_neon(data: *mut u64, twiddles: *const u64, halfBlock: c_int, nBlocks: c_int);
    pub fn gl_batch_butterfly_dif_neon(data: *mut u64, twiddles: *const u64, halfBlock: c_int, nBlocks: c_int);
}

// =============================================================================
// BN254 Fr field arithmetic (4 x u64 limbs, Montgomery form)
// =============================================================================

extern "C" {
    pub fn bn254_fr_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bn254_fr_sqr(a: *const u64, r: *mut u64);
    pub fn bn254_fr_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bn254_fr_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bn254_fr_neg(a: *const u64, r: *mut u64);
    pub fn bn254_fr_inverse(a: *const u64, r: *mut u64);
    pub fn bn254_fr_pow(a: *const u64, exp: u64, r: *mut u64);
    pub fn bn254_fr_eq(a: *const u64, b: *const u64) -> c_int;
}

// =============================================================================
// BN254 Fr NTT
// =============================================================================

extern "C" {
    pub fn bn254_fr_ntt(data: *mut u64, logN: c_int);
    pub fn bn254_fr_intt(data: *mut u64, logN: c_int);
}

// =============================================================================
// BN254 Fr Montgomery mul (ASM and C variants)
// =============================================================================

extern "C" {
    pub fn mont_mul_asm(result: *mut u64, a: *const u64, b: *const u64);
    pub fn mont_mul_c(result: *mut u64, a: *const u64, b: *const u64);
    pub fn mont_mul_batch_asm(data: *mut u64, multiplier: *const u64, n: c_int);
    pub fn mont_mul_pair_batch_asm(result: *mut u64, a: *const u64, b: *const u64, n: c_int);
    pub fn mont_mul_batch_c(data: *mut u64, multiplier: *const u64, n: c_int);
    pub fn mont_mul_pair_batch_c(result: *mut u64, a: *const u64, b: *const u64, n: c_int);
    pub fn mont_mul_asm_test() -> c_int;
}

// =============================================================================
// BN254 Fr batch operations (NEON-optimized)
// =============================================================================

extern "C" {
    pub fn bn254_fr_batch_add_neon(result: *mut u64, a: *const u64, b: *const u64, n: c_int);
    pub fn bn254_fr_batch_sub_neon(result: *mut u64, a: *const u64, b: *const u64, n: c_int);
    pub fn bn254_fr_batch_neg_neon(result: *mut u64, a: *const u64, n: c_int);
    pub fn bn254_fr_batch_mul_scalar_neon(result: *mut u64, a: *const u64, scalar: *const u64, n: c_int);
    pub fn bn254_fr_batch_add_parallel(result: *mut u64, a: *const u64, b: *const u64, n: c_int);
    pub fn bn254_fr_batch_sub_parallel(result: *mut u64, a: *const u64, b: *const u64, n: c_int);
    pub fn bn254_fr_batch_neg_parallel(result: *mut u64, a: *const u64, n: c_int);
    pub fn bn254_fr_batch_mul_scalar_parallel(result: *mut u64, a: *const u64, scalar: *const u64, n: c_int);
}

// =============================================================================
// BN254 Fr vector/polynomial operations
// =============================================================================

extern "C" {
    pub fn bn254_fr_vector_sum(a: *const u64, n: c_int, result: *mut u64);
    pub fn bn254_fr_inner_product(a: *const u64, b: *const u64, n: c_int, result: *mut u64);
    pub fn bn254_fr_vector_fold(a: *const u64, b: *const u64, x: *const u64, x_inv: *const u64, n: c_int, out: *mut u64);
    pub fn bn254_fr_batch_to_limbs(mont: *const u64, limbs: *mut u32, n: c_int);
    pub fn bn254_fr_synthetic_div(coeffs: *const u64, z: *const u64, n: c_int, quotient: *mut u64);
    pub fn bn254_fr_horner_eval(coeffs: *const u64, n: c_int, z: *const u64, result: *mut u64);
    pub fn bn254_fr_eval_and_div(coeffs: *const u64, n: c_int, z: *const u64, eval_out: *mut u64, quotient: *mut u64);
    pub fn bn254_fr_batch_inverse(a: *const u64, n: c_int, out: *mut u64);
    pub fn bn254_fr_batch_beta_add(beta: *const u64, values: *const u64, indices: *const c_int, m: c_int, result: *mut u64);
    pub fn bn254_fr_batch_decompose(lookups: *const u64, m: c_int, num_chunks: c_int, bits_per_chunk: c_int, indices: *mut c_int);
}

// =============================================================================
// BN254 Fr fused ops
// =============================================================================

extern "C" {
    pub fn bn254_fr_pointwise_mul_sub(a: *const u64, b: *const u64, c: *const u64, result: *mut u64, n: c_int);
    pub fn bn254_fr_coeff_div_vanishing(p_coeffs: *const u64, domain_n: c_int, h_coeffs: *mut u64);
    pub fn bn254_fr_linear_combine(running: *const u64, new_vals: *const u64, rho: *const u64, result: *mut u64, count: c_int);
    pub fn bn254_fr_basefold_fold(evals: *const u64, result: *mut u64, alpha: *const u64, half_n: u32);
    pub fn bn254_fr_basefold_fold_all(evals: *const u64, num_vars: c_int, point: *const u64, out_layers: *mut u64);
    pub fn bn254_fr_whir_fold(evals: *const u64, n: c_int, beta: *const u64, reduction_factor: c_int, result: *mut u64);
}

// =============================================================================
// BN254 Fp operations
// =============================================================================

extern "C" {
    pub fn bn254_fp_sqr(a: *const u64, r: *mut u64);
    pub fn bn254_fp_inv(a: *const u64, r: *mut u64);
    pub fn bn254_fp_sqrt(a: *const u64, r: *mut u64) -> c_int;
}

// =============================================================================
// BN254 G1 curve operations (Jacobian projective, 12 x u64)
// =============================================================================

extern "C" {
    pub fn bn254_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn bn254_point_add_mixed(p: *const u64, q_aff: *const u64, r: *mut u64);
    pub fn bn254_point_scalar_mul(p: *const u64, scalar: *const u32, r: *mut u64);
    pub fn bn254_projective_to_affine(p: *const u64, affine: *mut u64);
    pub fn bn254_batch_to_affine(proj: *const u64, aff: *mut u64, n: c_int);
}

// =============================================================================
// BN254 MSM (Pippenger)
// =============================================================================

extern "C" {
    pub fn bn254_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
    pub fn bn254_msm_projective(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
    pub fn bn254_dual_msm_projective(
        points1: *const u64, scalars1: *const u32, n1: c_int,
        points2: *const u64, scalars2: *const u32, n2: c_int,
        result1: *mut u64, result2: *mut u64,
    );
    pub fn bn254_fold_generators(gl: *const u64, gr: *const u64, x: *const u32, x_inv: *const u32, half_len: c_int, result: *mut u64);
}

// =============================================================================
// BGMW fixed-base MSM
// =============================================================================

extern "C" {
    pub fn bgmw_precompute(generators_affine: *const u64, n: c_int, window_bits: c_int, table_out: *mut u64);
    pub fn bgmw_msm(table: *const u64, n: c_int, window_bits: c_int, scalars: *const u32, result: *mut u64);
}

// =============================================================================
// BN254 Pairing
// =============================================================================

extern "C" {
    pub fn bn254_miller_loop(p_aff: *const u64, q_aff: *const u64, result: *mut u64);
    pub fn bn254_final_exp(f: *const u64, result: *mut u64);
    pub fn bn254_pairing(p_aff: *const u64, q_aff: *const u64, result: *mut u64);
    pub fn bn254_pairing_check(pairs: *const u64, n: c_int) -> c_int;
}

// =============================================================================
// BN254 KZG batch verification
// =============================================================================

extern "C" {
    pub fn bn254_batch_kzg_verify(
        srs_g1: *const u64, srs_secret: *const u64,
        commitments: *const u64, points: *const u64,
        evaluations: *const u64, witnesses: *const u64,
        batch_challenge: *const u64, n: c_int,
    ) -> c_int;
}

// =============================================================================
// BN254 sumcheck and MLE
// =============================================================================

extern "C" {
    pub fn bn254_fr_full_sumcheck(evals: *const u64, num_vars: c_int, challenges: *const u64, rounds: *mut u64, final_eval: *mut u64);
    pub fn bn254_fr_mle_eval(evals: *const u64, num_vars: c_int, point: *const u64, result: *mut u64);
    pub fn bn254_fr_inverse_evals(beta: *const u64, values: *const u64, n: c_int, out: *mut u64);
    pub fn bn254_fr_inverse_evals_indexed(beta: *const u64, subtable: *const u64, indices: *const c_int, n: c_int, out: *mut u64);
    pub fn bn254_fr_weighted_inverse_evals(beta: *const u64, values: *const u64, weights: *const u64, n: c_int, out: *mut u64);
    pub fn bn254_fr_inverse_mle_eval(beta: *const u64, subtable: *const u64, indices: *const c_int, n: c_int, num_vars: c_int, point: *const u64, result: *mut u64);
}

// =============================================================================
// GKR operations
// =============================================================================
